push flexbox initial

--- a/float/Bin_Martig.html
+++ b/float/Bin_Martig.html
@@ -11,7 +11,6 @@
   <link rel="shortcut icon" href="./assets/card.ico" type="image/x-icon">
 </head>
 
-
 <body>
   <div class="card">
     <div class="header">
@@ -40,7 +39,8 @@
           </table>
         </div>
         <div class="right vertical-text">
-          When you're thirsty at night, take care you don't accidentally reach for the bottled cat, for it will not be pleased.
+          When you're thirsty at night, take care you don't accidentally reach for the bottled cat, for it will not be
+          pleased.
         </div>
       </div>
     </div>
