overhauled and finalised card

--- a/flexbox/bin-martig-card.html
+++ b/flexbox/bin-martig-card.html
@@ -14,41 +14,55 @@
 
 <body>
     <div class="card">
+
         <div class="header">
-            <div class="left">a powerful drink</div>
-            <div class="right">★★★★☆</div>
+            <div class="description">a powerful drink</div>
+            <div class="rating">★★★★☆</div>
         </div>
-        <div class="main-content">
-            <img src="./assets/cat.png" alt="is it a cat? is it milk? we will never know." class="title-image">
-            <div class="text-wrapper">
-                <div class="left">
-                    <table>
-                        <colgroup>
-                            <col class="column-one">
-                            <col class="column-two">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <td><em>type</em></td>
-                                <td>mythical</td>
-                            </tr>
-                            <tr>
-                                <td><em>food</em></td>
-                                <td>souls of its enemies</td>
-                            </tr>
-                        </tbody>
-                    </table>
+
+        <div class="image-container">
+            <img class="title-image" src="./assets/cat.png" alt="is it a cat? is it milk? we will never know.">
+        </div>
+
+        <div class="main-description">
+            When you're thirsty at night, take care you don't accidentally reach for the bottled cat, for it
+            will not be pleased. treasure this card and play it when you are certain to have gained the creatures
+            courtesy.
+        </div>
+
+        <div class="stats-container">
+            <div class="stats-left">
+                <div class="stat-field">
+                    <p>type</p>
+                    <div class="stat">mythical</div>
                 </div>
-                <div class="right vertical-text">
-                    When you're thirsty at night, take care you don't accidentally reach for the bottled cat, for it
-                    will not be
-                    pleased.
+                <div class="stat-field">
+                    <p>state</p>
+                    <div class="stat">liquid</div>
+                </div>
+            </div>
+            <div class="stats-middle">
+                <div class="stat-field">
+                    <p>strength</p>
+                    <div class="stat">surprise attack</div>
+                </div>
+                <div class="stat-field">
+                    <p>weakness</p>
+                    <div class="stat">locked in</div>
+                </div>
+            </div>
+            <div class="stats-right">
+                <div class="stat-field">
+                    <p>health</p>
+                    <div class="stat">3</div>
+                </div>
+                <div class="stat-field">
+                    <p>shield</p>
+                    <div class="stat">+15</div>
                 </div>
             </div>
         </div>
-        <div class="footer">
 
-        </div>
     </div>
 </body>
 
