initial javasscript + supporting html, css

--- a/javascript/bin-martig-card.html
+++ b/javascript/bin-martig-card.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/vro5wwp.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./assets/card.ico" type="image/x-icon">
+    <script src="./javascript.js" defer></script>
 </head>
 
 <body>
@@ -40,6 +41,10 @@
                     <p>state</p>
                     <div class="stat">liquid</div>
                 </div>
+                <div class="stat-field">
+                    <p>cat?</p>
+                    <input id="riddle3" type="text" form="riddle" placeholder="wow">
+                </div>
             </div>
             <div class="stats-middle">
                 <div class="stat-field">
@@ -50,6 +55,10 @@
                     <p>weakness</p>
                     <div class="stat">locked in</div>
                 </div>
+                <div class="stat-field">
+                    <p>stars</p>
+                    <input id="riddle2" type="range" min="0" max="5" form="riddle">
+                </div>
             </div>
             <div class="stats-right">
                 <div class="stat-field">
@@ -59,6 +68,10 @@
                 <div class="stat-field">
                     <p>shield</p>
                     <div class="stat">+15</div>
+                </div>
+                <div class="stat-field">
+                    <p>defense</p>
+                    <input id="riddle1" type="text" form="riddle" maxlength="2" autofocus placeholder="wow">
                 </div>
             </div>
         </div>
